rbx-dom/rbx_dom_weak/src/snapshots/rbx_dom_weak__viewer__test__redact_multi.snap
---
source: rbx-dom/rbx_dom_weak/src/viewer.rs
expression: "DomViewer::new().view(&dom)"
---
referent: referent-0
name: Root
class: Folder
properties: {}
children:
  - referent: referent-1
    name: Child 0
    class: Folder
    properties: {}
    children: []
  - referent: referent-2
    name: Child 1
    class: Folder
    properties: {}
    children: []
  - referent: referent-3
    name: Child 2
    class: Folder
    properties: {}
    children: []
  - referent: referent-4
    name: Child 3
    class: Folder
    properties: {}
    children: []
