rbx-dom/rbx_dom_weak/src/snapshots/rbx_dom_weak__viewer__test__redact_single.snap
---
source: rbx-dom/rbx_dom_weak/src/viewer.rs
expression: "DomViewer::new().view(&dom)"
---
referent: referent-0
name: Root
class: Folder
properties: {}
children: []
